helm/istio/security/customers/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: default
spec:
  selector:
    istio: ingress-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP # HTTP, HTTPS, GRCP, MONGO, TCP, or TLS
      hosts:
        - '*'
